Fix: add border-collapse in style css

--- a/task2.1/style1.css
+++ b/task2.1/style1.css
@@ -12,9 +12,9 @@ header{
     font-size: 20px;
 }
 
-table{
-    border-style: none;
-}
+table {
+    border-collapse: collapse;
+  }
 
 #right_box{
     padding: 0;
